# Projekt-sk2

./: README.md  client.py  flake.nix
backend/: CMakeLists.txt  README.md  compile.sh  main.cpp
backend/Projekt-sk2-backend/: client.py
backend/Projekt-sk2-backend/backend/libraries/cpp/: LobbyHandler.cpp  UserHandler.cpp  UserRequestConverter.cpp
backend/Projekt-sk2-backend/backend/libraries/header/: GlobalSettings.h  IRequestResult.h  Lobby.h  RequestConverter.h  RequestType.h  ResultType.h  Server.h  ServerConnection.h  TCPHandler.h  User.h  UserActionResult.h
backend/libraries/: CMakeLists.txt
backend/libraries/cpp/: Config.cpp  Game.cpp  GlobalSettings.cpp  IRequestData.cpp  IRequestResult.cpp  Lobby.cpp  LobbyHandler.cpp  LobbyRequestConverter.cpp  Log.cpp  Rational.cpp  RequestConverter.cpp  Server.cpp  TCPHandler.cpp  UserActionResultConverter.cpp  UserHandler.cpp  UserRequestConverter.cpp  config.txt
backend/libraries/cpp/logs/: log0.txt  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt
backend/libraries/header/: Config.h  Game.h  GameActionResult.h  GlobalSettings.h  IRequestData.h  IRequestResult.h  IServerRequestHandler.h  Lobby.h  LobbyActionResult.h  LobbyData.h  LobbyHandler.h  LobbyRequestConverter.h  Log.h  Player.h  Rational.h  RequestConverter.h  RequestType.h  ResultType.h  Server.h  ServerConnection.h  TCPHandler.h  User.h  UserActionResult.h  UserActionResultConverter.h  UserData.h  UserHandler.h  UserRequestConverter.h
